Added endpoint for suspension info
