# routes/web.php
@@ -43,6 +43,7 @@ Route::delete('article/{id}', 'ArticleController@destroy');
 
 // Admin
 Route::get('admin', 'AdminController@show');
+Route::get('admin/suspensions', 'AdminController@suspensions');
 
 // Tag
 // Route::get('tags', 'TagController@listAcceptedTags');    I don't think we need this since tags are only shown to users either on homepage or by the next endpoint 'showUserFavorites'
